--- a/My Lacemarket/main.css
+++ b/My Lacemarket/main.css
@@ -1,1 +1,31 @@
+.page-header {
+    margin-top: 0%;
+}
 
+body {
+    margin-left: 10%;
+    margin-right: 10%;
+    background-image: url(images/lacebg.jpg);
+    background-repeat: repeat;
+    border-left: 1px solid powderblue;
+    border-right: 1px solid powderblue;
+}
+
+.container-fluid {
+    background-color: white;
+    margin-bottom: 0%;
+}
+
+.page-header {
+    background-color:white;
+    margin-bottom: 0px;
+}
+
+.navbar {
+    margin-top: 0px;
+}
+
+.form-group {
+    margin: 10px;
+    
+}
