--- a/enviro/css/business-frontpage.css
+++ b/enviro/css/business-frontpage.css
@@ -10,7 +10,7 @@ body {
 
 .business-header {
     height: 400px;
-    background: url("https://github.com/mdevlin96/portfolio/enviro/banner.png") center center no-repeat scroll;
+    background: url(https://github.com/mdevlin96/portfolio/enviro/banner.png) center center no-repeat scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
