--- a/globulear-home/style.css
+++ b/globulear-home/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .home-banner {
-    background-image:url('/images/bg3.png');
+    background-image:url('images/bg3.png');
     background-repeat:no-repeat;
     background-size: 100% 140%; 
     margin: 0px !important;
